--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -10,20 +10,13 @@
 <div class="social-share">
     <h4>Share on</h4>
     
-            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-apsbtet-results" target='_blank'
-               class="twitter" title="Share on Twitter"><i class="fa fa-twitter"></i><span> Twitter</span></a>
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-apsbtet-results" target='_blank' class="twitter" title="Share on Twitter"><i class="fa fa-twitter"></i><span> Twitter</span></a>
        
-            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-apsbtet-results/?url=http://www.neetgov.in/ap-apsbtet-results"
-               target='_blank'
-               class="facebook" title="Share on Facebook"><i class="fa fa-facebook"></i><span> Facebook</span></a>
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-apsbtet-results/?url=http://www.neetgov.in/ap-apsbtet-results" target='_blank' class="facebook" title="Share on Facebook"><i class="fa fa-facebook"></i><span> Facebook</span></a>
        
-            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-apsbtet-results" target='_blank'
-               class="google-plus" title="Share on Google Plus"><i
-                    class="fa fa-google-plus"></i><span> Google+</span></a>
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-apsbtet-results" target='_blank' class="google-plus" title="Share on Google Plus"><i class="fa fa-google-plus"></i><span> Google+</span></a>
 
-            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-apsbtet-results" class="whatsapp"
-               title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i
-                    class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-apsbtet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
 </div><!-- /.social-share -->
 <br>
         
